--- a/site/styles/root.scss
+++ b/site/styles/root.scss
@@ -1,4 +1,5 @@
 @import "./content";
+@import "./article-list";
 
 * {
   box-sizing: border-box;
@@ -121,9 +122,11 @@ div.layout {
     }
   }
 
-  > main {
+  > main,
+  > article {
     grid-row: 2;
     @include main-content;
+    @include article-list;
   }
 
   > footer {
